init info to input

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
             <h3 class="title_form_3">Veuillez vous identifier...</h3>
             <div class="group-input_form">
                 <input type="text" id="name" placeholder="Nom" class="input_form"/>
+                <p class="info-form_name"></p>
                 <input type="text" id="lastname" placeholder="Prénom" class="input_form"/>
+                <p class="info-form_lastname"></p>
                 <input type="text" id="school" placeholder="Établissement" class="input_form"/>
+                <p class="info-form_school"></p>
                 <input type="text" id="mail" placeholder="E-mail" class="input_form"/>
+                <p class="info-form_mail"></p>
                 <button class="input-btn">Passer au QCM</button>
             </div>
         </div>
