--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 Il est demandé de répondre aux questions au moins 15 jours avant la première semaine de présentiel.
                 Les questions traitent essentiellement autour des Bonnes Pratiques de Pharmacie Hospitalière ! 
                 (BPPH de 2001/2002). Il n'y a pas de piège, 
-                ce sont des questions pratico-pratiques qui peuvent vous être posés tous les jours dans votre pratique.
+                ce sont des questions pratico-pratiques qui peuvent vous être posées tous les jours dans votre pratique.
                 Pour répondre au questionnaire, il n'y a pas de compteur de temps activé. 
                 L'utilisation de documentation ou la recherche sur le web sont autorisées. 
                 L'idée est vraiment de commencer à se poser de bonnes questions pour lesquelles les réponses vous seront données pendant les cours. 
